<resources>
    <string name="app_name">Basic Japanese</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_home">Ứng dụng học tiếng nhật</string>
    <string name="title_search">Tìm kiếm kanji</string>
    <string name="title_search_count">từ được tìm thấy cho từ khóa</string>
    <string name="title_search_error">Bạn phải nhập ít nhất 2 kí tự</string>
    <string name="title_alphabet">Bảng chữ cái</string>
    <string name="title_audio_learning">Học tiếng nhật NHK</string>
    <string name="title_kanji_basic">Kanji cơ bản</string>
    <string name="title_kanji_advance">Kanji nâng cao</string>
    <string name="title_kanji_writing">Tập viết Kanji</string>
    <string name="title_jlpt_test">Thi JLPT</string>
    <string name="title_translate">Dịch tiếng nhật</string>
    <string name="title_basic_courses">Khóa học nhập môn</string>
    <string name="title_kanji_courses">Khóa học Kanji</string>
    <string name="title_help">Trợ giúp</string>
    <string name="title_hiragana">Hiragana</string>
    <string name="title_katakana">Katakana</string>
    <string name="title_switch_remember">Đã nhớ từ này</string>
    <string name="title_audio_lesson">Audio Lesson</string>
    <string name="title_kanji_onjomi">on:</string>
    <string name="title_kanji_kunjomi">kun:</string>
    <string name="title_select_dialog">Lựa chọn bài học</string>
    <string name="title_lesson">Bài</string>
    <string name="title_kanji_detail_remember">Ghi nhớ</string>
    <string name="title_kanji_detail_china_mean">Âm hán</string>
    <string name="title_kanji_detail_viet_mean">Nghĩa</string>
    <string name="title_kanji_detail_onjomi">Onjomi</string>
    <string name="title_kanji_detail_kunjomi">Kunjomi</string>
    <string name="title_kanji_detail_example">Ví dụ</string>
    <string name="title_practice">Ôn tập</string>
    <string name="title_favorite">Yêu thích</string>
    <string name="title_grammar">Ngữ pháp</string>
    <string name="title_test_grammar">Ngữ pháp</string>
    <string name="title_test_vocabulary">Từ vựng</string>
    <string name="title_test_kanji">Kanji</string>
    <string name="title_n1">N1</string>
    <string name="title_n2">N2</string>
    <string name="title_n3">N3</string>
    <string name="title_n4">N4</string>
    <string name="title_n5">N5</string>
    <string name="title_total_questions">Tổng số câu hỏi:</string>
    <string name="title_corrected_answers">Số đáp án đúng:</string>
    <string name="title_wrong_answers">Số đáp án sai:</string>
    <string name="title_mark">Điểm:</string>
    <string name="title_progress_load_kanji_basic_data">Đang tải dữ liệu kanji cơ bản</string>
    <string name="title_progress_load_kanji_advance_data">Đang tải dữ liệu kanji nâng cao</string>
    <string name="title_progress_load_jlpt_test_data">Đang tải dữ liệu jlpt test</string>

</resources>
