<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textTotalQuestionTitle"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="end"
        android:text="@string/title_total_questions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTotalQuestion"
        android:layout_width="@dimen/dp_96"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_8"
        android:textColor="@color/color_text_primary"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textTotalQuestionTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCorrectedAnswersTitle"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="end"
        android:text="@string/title_corrected_answers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTotalQuestionTitle" />

    <TextView
        android:id="@+id/textCorrectedAnswers"
        android:layout_width="@dimen/dp_96"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:textColor="@color/color_kanji_onjomi"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textCorrectedAnswersTitle"
        app:layout_constraintTop_toBottomOf="@+id/textTotalQuestion" />

    <TextView
        android:id="@+id/textWrongAnswersTitle"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="end"
        android:text="@string/title_wrong_answers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCorrectedAnswersTitle" />

    <TextView
        android:id="@+id/textWrongAnswers"
        android:layout_width="@dimen/dp_96"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:textColor="@color/color_kanji_kunjomi"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textWrongAnswersTitle"
        app:layout_constraintTop_toBottomOf="@+id/textCorrectedAnswers" />

    <TextView
        android:id="@+id/textMarkTitle"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:text="@string/title_mark"
        android:textColor="@color/color_text_primary"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWrongAnswersTitle" />

    <TextView
        android:id="@+id/textMark"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/fragment_background"
        android:gravity="center"
        android:textColor="@color/color_text_primary"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textMarkTitle"
        app:layout_constraintTop_toBottomOf="@+id/textWrongAnswers" />
</android.support.constraint.ConstraintLayout>
